apps/music/style/music.css
/* ... */
/*
 * spinner animation styles copied from
 * shared/style/progress_activity.css
 */
#spinner {
  position: absolute;
  top: calc(50% - 1.5rem);
  left: calc(50% - 1.5rem);
}


/* Display the names of the songs we scan here */
#scan-progress {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 5rem;
  border: none;
  overflow: hidden;
  z-index: 31;
  background-color: #333;
  color: #fff;
}

#scan-spinner {
  position: absolute;
  top: 1rem;
  left: 1rem;
}

#scan-count {
  position: absolute;
  top: 0;
  left: 0;
  width: 5rem;
  height: 5rem;
  border: none;
  background-color: rgba(0,0,0,0);
  font-size: 1.2rem;
  font-weight: bold;
  text-align: center;
  padding-top: 1.7rem;
}

#scan-artist {
  position: absolute;
  top: 0;
  left: 5rem;
  right: 0;
  height: 3rem;
  line-height: 3rem;
  padding-left: .5rem;
  font-size: 1.9rem;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#scan-title {
  position: absolute;
  top: 3rem;
  left: 5rem;
  right: 0;
  height: 2rem;
  line-height: 1.9rem;
  padding-left: .5rem;
  font-size: 1.4rem;
  text-align: left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

body.tiles-mode #title-back,
body.list-mode #title-back,
body.search-from-tiles-mode #title-back,
body.search-from-list-mode #title-back {
  display: none;
}

body.search-from-tiles-mode #title,
body.search-from-list-mode #title {
  transform: translateY(-5rem);
}

body.player-mode #tabs {
  z-index: 1;
}

body.tiles-mode #views {
  transform: translateX(0%);
}

body.search-from-tiles-mode #views {
  transform: translateX(0%) translateY(-5rem);
}

body.list-mode #views,
body.picker-mode #views {
  transform: translateX(-100%);
}

body.search-from-list-mode #views {
  transform: translateX(-100%) translateY(-5rem);
}

body.search-from-tiles-mode #search,
body.search-from-list-mode #search {
  transform: translateY( calc(-100%) );
}

body.search-from-tiles-mode #views-tiles,
body.search-from-list-mode #views-list {
  overflow-y: hidden;
}

body.search-from-tiles-mode #tabs,
body.search-from-list-mode #tabs,
body.picker-mode #tabs {
  display: none;
}

body.sublist-mode #views {
  transform: translateX(-200%);
  z-index: 20;
}

body.player-mode #views {
  transform: translateX(-300%);
  z-index: 30;
}

body.picker-mode #views {
  transition: transform 0ms ease;
}

body.player-mode #title-player,
body.picker-mode #title-player {
  display: none;
}

#title-player > .icon-player {
  background-image: url("./images/now_playing.png");
}

#title-done > .icon-done {
  background-image: url("./images/IconAction_Done_30x30.png");
}

#title {
  transition: transform 300ms ease;
}

#views {
  position: relative;
  width: 100%;
  height: calc(100% - 5rem);
  background-color: rgba(255, 255, 255, 0.2);
  transition: transform 300ms ease;
}

#search {
  position: relative;
  width: 100%;
  height: calc(100% - 3.6rem);
  overflow-x: hidden;
  overflow-y: auto;
  background: -moz-linear-gradient(center top, #303030 0%, #000000 100%) repeat scroll 0 0 transparent;
  z-index: 10;
  transition: transform 300ms ease;
}

.view {
  width: 100%;
  height: auto;
}

#views-tiles,
#views-list,
#views-sublist,
#views-player {
  position: absolute;
}

#views-tiles,
#views-list,
#views-sublist {
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
  background-color: #0E1214;
  will-change: scroll-position;
}

#views-tiles {
  left: 0%;
}

#views-list {
  left: 100%;
}

#views-sublist {
  left: 200%;
  overflow-y: hidden;
}

#views-player {
  left: 300%;
  height: 100%;
  overflow: hidden;
}

#views-player.open-mode {
  left: 0%;
}

/* Make sure the tiles and list views are tall enough that we can scroll the
 * search box off-screen. */
#views-tiles-anchor,
#views-list-anchor {
  min-height: 100%;
}

#views-sublist-header,
#views-sublist-anchor {
  position: relative;
  float: left;
  width: 100%;
}

#views-sublist-header {
  height: 8rem;
}

#views-sublist-anchor {
  width: 100%;
  height: calc(100% - 8rem);
  overflow-x: hidden;
  overflow-y: auto;
  will-change: scroll-position;
}

#views-sublist-header-image,
#views-sublist-header-controls {
  position: relative;
  float: left;
  left: 3rem;
  border-bottom: solid 0.1rem rgba(255, 255, 255, 0.1);
}

#views-sublist-header-image {
  width: 8rem;
  height: 8rem;
  overflow: hidden;
  background-clip: content-box;
  background-size: cover;
  background-position: center center;
  opacity: 0;
}

#views-sublist-header-name {
  position:relative;
  font-size: 1.9rem;
  padding: 0 1rem;
  width: calc(100% - 2rem);
  height: 4rem;
  line-height: 4rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#views-sublist-header-controls {
  /* left: 3rem and album-art: 8rem */
  width: calc(100% - 3rem - 8rem);
  height: 8rem;
}

#views-sublist-controls-play,
#views-sublist-controls-shuffle {
  position:relative;
  float: left;
  font-size: 1.9rem;
  padding: 0 1rem;
  width: 50%;
  height: 4rem;
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 3rem;
}

#views-sublist-controls-play {
  background-image: url("./images/IconAction_Media_Play_30x30.png");
}

#views-sublist-controls-shuffle {
  background-image: url("./images/IconAction_Media_ShuffleOn_30x30.png");
}

.album-controls-button {
  border: none;
  border-radius: 0;
  background: transparent;
  transition: background 200ms ease;
}

.album-controls-button:hover {
  background: transparent;
}

.album-controls-button:active {
  background: rgb(0, 138, 170);
}

.album-controls-button:disabled {
  opacity: 0.3;
}

.album-controls-button:disabled:active {
  background: transparent;
}

.tile {
  position: relative;
  background-position: center;
  background-size: cover;

  /* We set a background URL here when the thumbnail loads */
}

.main-tile {
  width: 66%;
  height: 0;
  padding-bottom: 66%;
  background-color: black;
  overflow: hidden;
}
/* ... */

